--- a/save/916.html
+++ b/save/916.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170915/vendor/swiper.min.css">
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170915/css/index.css">
+  <link rel="stylesheet" href="./sass/libs/swiper.min.css">
+  <link rel="stylesheet" href="./stylesheets/index.css">
 
   <script>
     (function () {
@@ -70,11 +70,11 @@
 </div>
 <!--loading-->
 <div class="loading">
-  <img width="24" height="24" src="https://cdn2.qnzsvk.cn/static/20170915/images/loading.gif" alt="">
+  <img width="24" height="24" src="images/loading.gif" alt="">
   <p class="desc">正在载入...</p>
 </div>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/jquery.min.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/swiper.jquery.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/js/index.js"></script>
+<script src="js/libs/jquery.min.js"></script>
+<script src="js/libs/swiper.jquery.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
