--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,10 @@
   <img width="24" height="24" src="https://cdn2.qnzsvk.cn/static/20170915/images/loading.gif" alt="">
   <p class="desc">正在载入...</p>
 </div>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/jquery.min.js"></script>
 <script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/swiper.jquery.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170915/js/public/commt.js"></script>
 <script src="https://cdn2.qnzsvk.cn/static/20170915/js/index.js"></script>
 </body>
 </html>
