--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170915/vendor/swiper.min.css">
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170915/css/index.css">
+  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/vendor/swiper.min.css">
+  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/css/index.css">
 
   <script>
     (function () {
@@ -73,10 +73,27 @@
   <img width="24" height="24" src="https://cdn2.qnzsvk.cn/static/20170915/images/loading.gif" alt="">
   <p class="desc">正在载入...</p>
 </div>
+<nav id="nav">
+  <ul class="nav">
+    <li>
+      <a href="#" class="home">首页</a>
+    </li>
+    <li>
+      <a href="bought.html" class="hasBought">已购</a>
+    </li>
+    <li>
+      <a href="history.html" class="playHistory">播放历史</a>
+    </li>
+    <li>
+      <a href="personal.html" class="userCenter">个人中心</a>
+    </li>
+  </ul>
+</nav>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/jquery.min.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/vendor/swiper.jquery.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/js/public/commt.js"></script>
-<script src="https://cdn2.qnzsvk.cn/static/20170915/js/index.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/vendor/jquery.min.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/vendor/swiper.jquery.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/vendor/dropload.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/js/public/commt.js"></script>
+<script src="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/js/index.js"></script>
 </body>
 </html>
