--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,7 @@
 </div>
 <!--选项卡-->
 <div id="tab" class="swiper-container-tab">
-  <div class="swiper-wrapper">
-  </div>
+  <div class="swiper-wrapper"></div>
 </div>
 </div>
 <!--精选推荐-->
