--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/vendor/swiper.min.css">
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/css/index.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
 
   <script>
     (function () {
@@ -61,11 +61,100 @@
     <ul class="class_advance">
     </ul>
   </div>
-  <!--推荐语音-->
-  <div id="audio_advance" class="audio_advance choose_craful">
-    <h2 class="audio_title"></h2>
-    <ul class="audio_content"></ul>
+  <!--课程包-->
+  <!--<div class="class_bag">
+    <ul class="bag_content">
+      <li class="bag_item">
+        <a class="bag_wrapper history" href="javascript:">
+          <i class="icon">
+            <img
+                src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-10/5a059bd421747.jpg"
+                alt="">
+          </i>
+          <span class="audio_info">
+            <span class="audio_title">如何引导爱推卸责任的孩子（上）</span>
+            <span class="audio_owner">刘心</span>
+            <span class="audio_hot">
+              <span>更新至第2课/共4课</span>
+              <span>126购买</span>
+              <span class="bag_price">￥199.90
+              </span>
+            </span>
+          </span>
+
+        </a>
+      </li>
+    </ul>
+  </div>-->
+  <!--线下活动-->
+  <div class="off_line_activity history">
+    <ul class="activity_content">
+      <li class="activity_item">
+        <div class="activity_left">
+          <img src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-10/5a059bd421747.jpg" alt="">
+        </div>
+        <div class="activity_right">
+          <div class="activity_title">
+            <h2>青年之声网络扶智行动校长面对面</h2>
+          </div>
+          <div class="time_where">
+            <time>2017.11.20 10 | 岷山饭店</time>
+          </div>
+          <div class="activity_money">
+            <span class="money_sum">160</span>
+            <span class="money_unit">元</span>
+          </div>
+          <div class="owner_info">
+            <div class="activity_sponsor">主办方: 团中央网络影视中心</div>
+            <div class="activity_speaker">主讲人: 电子科大实验中学校长张福平</div>
+          </div>
+        </div>
+      </li>
+      <li class="activity_item">
+        <div class="activity_left">
+          <img src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-10/5a059bd421747.jpg" alt="">
+        </div>
+        <div class="activity_right">
+          <div class="activity_title">
+            <h2>青年之声网络扶智行动校长面对面</h2>
+          </div>
+          <div class="time_where">
+            <time>2017.11.20 10 | 岷山饭店</time>
+          </div>
+          <div class="activity_money">
+            <span class="money_sum">160</span>
+            <span class="money_unit">元</span>
+          </div>
+          <div class="owner_info">
+            <div class="activity_sponsor">主办方: 团中央网络影视中心</div>
+            <div class="activity_speaker">主讲人: 电子科大实验中学校长张福平</div>
+          </div>
+        </div>
+      </li>
+      <li class="activity_item">
+        <div class="activity_left">
+          <img src="images/ticket1.png" alt="">
+        </div>
+        <div class="activity_right">
+          <div class="activity_title">
+            <h2>青年之声网络扶智行动校长面对面</h2>
+          </div>
+          <div class="time_where">
+            <time>2017.11.20 10 | 岷山饭店</time>
+          </div>
+          <div class="activity_money">
+            <span class="money_sum">160</span>
+            <span class="money_unit">元</span>
+          </div>
+          <div class="owner_info">
+            <div class="activity_sponsor">主办方: 团中央网络影视中心</div>
+            <div class="activity_speaker">主讲人: 电子科大实验中学校长张福平</div>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
+
 </div>
 <!--loading-->
 <div class="loading">
