--- a/src/bought.html
+++ b/src/bought.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>已经购买</title>
-  <link rel="stylesheet" href="https://cdn2.qnzsvk.cn/static/20170925/qnvk_2.0/css/bought.css">
+  <link rel="stylesheet" href="stylesheets/bought.css">
   <script>
     (function () {
       setRem()
@@ -20,8 +20,113 @@
   </script>
 </head>
 <body>
-<ul id="bought">
+<div id="tab">
+  <div class="tab tab_active">线上课程</div>
+  <div class="tab">活动门票</div>
+</div>
+<ul class="tab_content">
+  <li class="bought_content history">
+    <h3 class="title">
+      <span class="class_name">课程包</span>
+      <span class="status">已购买</span>
+    </h3>
+    <a class="class_list" href="http://www3.qnzsvk.cn/index.php/Newautolive/index/id/27045">
+      <img
+          src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-27/5a1bde1eedced.jpg" alt="">
+      <span class="class_info"><span class="class_title">《和孩子一块儿上学》</span>
+        <span class="class_user">成都石室联中康自力</span>
+      </span>
+      <span class="price">￥99.00</span>
+    </a>
+  </li>
+  <li class="bought_content history">
+    <h3 class="title">
+      <span class="class_name">课程包</span>
+      <span class="status">已购买</span>
+    </h3>
+    <a class="class_list" href="http://www3.qnzsvk.cn/index.php/Newautolive/index/id/27045">
+      <img
+          src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-27/5a1bde1eedced.jpg" alt="">
+      <span class="class_info"><span class="class_title">《和孩子一块儿上学》</span>
+        <span class="class_user">成都石室联中康自力</span>
+      </span>
+      <span class="price">￥99.00</span>
+    </a>
+  </li>
 </ul>
+<ul class="tab_content tickets" style="display: none">
+  <li class="bought_content history">
+    <h3 class="title">
+      <span class="status ticket_status">支付成功</span>
+    </h3>
+    <ul class="activity_content">
+      <li class="activity_item">
+        <div class="activity_left">
+          <img src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-10/5a059bd421747.jpg"
+               alt="">
+        </div>
+        <div class="activity_right">
+          <div class="activity_title">
+            <h2>青年之声网络扶智行动校长面对面</h2>
+          </div>
+          <div class="time_where">
+            <time>2017.11.20 10 | 岷山饭店</time>
+          </div>
+          <div class="activity_money">
+            <span class="money_sum">160</span>
+            <span class="money_unit">元</span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </li>
+  <li class="bought_content history">
+    <h3 class="title">
+      <span class="status ticket_status">支付成功</span>
+    </h3>
+    <ul class="activity_content">
+      <li class="activity_item">
+        <div class="activity_left">
+          <img src="http://assert-qnvk.oss-cn-shenzhen.aliyuncs.com/Uploads/Picture/2017-11-10/5a059bd421747.jpg"
+               alt="">
+        </div>
+        <div class="activity_right">
+          <div class="activity_title">
+            <h2>青年之声网络扶智行动校长面对面</h2>
+          </div>
+          <div class="time_where">
+            <time>2017.11.20 10 | 岷山饭店</time>
+          </div>
+          <div class="activity_money">
+            <span class="money_sum">160</span>
+            <span class="money_unit">元</span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </li>
+</ul>
+
+<script>
+  var tabs = document.querySelectorAll('#tab .tab')
+  var tabContent = document.querySelectorAll('.tab_content')
+
+  function tabClick() {
+    for (var i = 0; i < tabs.length; i++) {
+      tabs[i].index = i
+      tabs[i].onclick = function () {
+        for (var i = 0; i < tabContent.length; i++) {
+          tabContent[i].style.display = 'none'
+          tabs[i].className = 'tab'
+        }
+        tabContent[this.index].style.display = 'block'
+        tabs[this.index].className = 'tab tab_active'
+      }
+    }
+  }
+
+  tabClick()
+</script>
 <nav id="nav">
   <ul class="nav">
     <li>
